# backend/apps/secondary_market/api/urls.py
@@ -5,6 +5,7 @@ from django.urls import path
 from backend.apps.secondary_market.api.views import (
     SecondaryMarketListingApproveView,
     SecondaryMarketListingListCreateView,
+    SecondaryMarketListingPurchaseView,
     SecondaryMarketListingRejectView,
     SecondaryMarketListingRemoveView,
 )
@@ -19,6 +20,11 @@ urlpatterns = [
         "admin/listings/<uuid:listing_id>/approve/",
         SecondaryMarketListingApproveView.as_view(),
         name="secondary-market-listing-approve",
+    ),
+    path(
+        "listings/<uuid:listing_id>/purchase/",
+        SecondaryMarketListingPurchaseView.as_view(),
+        name="secondary-market-listing-purchase",
     ),
     path(
         "admin/listings/<uuid:listing_id>/reject/",
